Added body container to hopefully make things the correct size on mobile

--- a/pipeline_webpage/css/stylesheet.css
+++ b/pipeline_webpage/css/stylesheet.css
@@ -430,3 +430,8 @@ th, tr, td {
 #report_selection_back {
     margin-left: 1vw !important;
 }
+
+.body-div {
+    height: 100%;
+    width: 100%;
+}
