--- a/pipeline_webpage/css/stylesheet.css
+++ b/pipeline_webpage/css/stylesheet.css
@@ -87,10 +87,6 @@ p {
     margin-left: 27.5%;
 }
 
-#panel_title {
-    margin-left: 40%;
-}
-
 #other_match {
     margin-left: 0%;
 }
@@ -297,7 +293,7 @@ body::after {
     background-image: linear-gradient(100deg, #0021A5, #E28F41);
     background-attachment: fixed;
     background-position: center;
-    border-color: rgba(27,27,27, 1);
+    border: solid 1px rgba(27,27,27, 1);
     color: #f5f5f5;
     border-radius: 25px;
     text-align: center;
@@ -456,6 +452,16 @@ th, tr, td {
     margin-left: 1vw !important;
 }
 
+#request_selection_back {
+    margin-left: 1vw !important;
+}
+
+#request_reports {
+    word-wrap: break-word !important;
+    vertical-align: middle !important;
+    margin-left: 1vw !important;
+}
+
 .body-div {
     height: 100%;
     width: 100%;
@@ -553,4 +559,27 @@ th, tr, td {
     background-color: #eee;
     color: #aaa;
     cursor: text;
+}
+
+.search-input {
+    width: 90%;
+    border-radius: 8px;
+    height: 1vmax;
+    font-size: 0.5vmax;
+    margin-left: 4%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.034);
+}
+
+#select_all_box {
+    order: 1;
+}
+#parent_selector_child_box {
+    order: 2;
+}
+#select_all_button {
+    width: 80%;
+    margin-left: 1vmax;
+    margin-top: 4.5vmax;
 }
